# autologger

./: pyproject.toml
.github/workflows/: publish.yml
autologger/: __init__.py  logger.py
